tests/sksl/errors/ArrayOfVoidInStruct.glsl
### Compilation failed:

error: 4: opaque type 'void' is not permitted in a struct
error: 5: opaque type 'void' is not permitted in a struct
error: 6: opaque type 'void' is not permitted in a struct
3 errors
